# backlit-streamline-rs

./: .gitignore  Cargo.toml  Makefile  README.md
api/: Cargo.toml
core/: Cargo.toml
core/src/media/mp4/: mod.rs
core/src/media/mp4/atom/ftyp/: mod.rs
docs/: http-live-streaming.md
reader/: Cargo.toml
reader/src/: main.rs
src/: lib.rs
src/media/: mod.rs
src/media/mp4/: mod.rs
src/media/mp4/atom/: ftyp.rs  mod.rs
src/media/mp4/atom/boxtype/: mod.rs
src/media/mp4/atom/ftyp/: mod.rs
streamline-core/: Cargo.toml
streamline-core/src/: lib.rs
streamline-core/src/io/: mod.rs
streamline-core/src/io/pipe/: mod.rs
streamline-core/src/media/: mod.rs
streamline-core/src/media/mp4/: mod.rs
streamline-core/src/media/mp4/atom/: cdat.rs  dinf.rs  free.rs  frma.rs  ftyp.rs  hdlr.rs  info.rs  ipmc.rs  mdat.rs  mod.rs  moov.rs  schi.rs  schm.rs  sidx.rs  sinf.rs  skip.rs
streamline-core/src/media/mp4/atom/boxtype/: mod.rs
streamline-core/src/media/mp4/atom/meta/: bxml.rs  idat.rs  iloc.rs  ipro.rs  iref.rs  mod.rs  pitm.rs  xml.rs
streamline-core/src/media/mp4/atom/meta/fiin/: gitn.rs  mod.rs  segr.rs
streamline-core/src/media/mp4/atom/meta/iinf/: fdel.rs  infe.rs  mod.rs
streamline-core/src/media/mp4/atom/udta/: cprt.rs  ilst.rs  kind.rs  mod.rs  tsel.rs
streamline-core/src/media/mp4/atom/udta/hinf/: dimm.rs  dmax.rs  dmed.rs  drep.rs  maxr.rs  mod.rs  npck.rs  nump.rs  payt.rs  pmax.rs  tmax.rs  tmin.rs  totl.rs  tpay.rs  tpyl.rs  trpy.rs
streamline-macros/: Cargo.toml
streamline-macros/src/: lib.rs
(+13 files in other folders)
