[package]
name = "reader"
version = "0.1.0"
authors = ["Jonathan Whittle <jonathan.m.whittle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../streamline-core", package = "streamline-core" }
