[package]
name = "streamline-macros"
version = "0.1.0"
authors = ["Jonathan Whittle <jonathan.m.whittle@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.98", features = ["full", "extra-traits"] }
quote = "1.0"

[lib]
proc-macro = true